--- a/app/src/main/res/layout/activity_edit_pesquisa_produto.xml
+++ b/app/src/main/res/layout/activity_edit_pesquisa_produto.xml
@@ -8,6 +8,11 @@
     android:padding="30dp"
     tools:context=".activity.EditPesquisaProdutoActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name" />
+
     <EditText
         android:id="@+id/edit_codBarras"
         android:layout_width="match_parent"
@@ -17,27 +22,29 @@
         android:imeOptions="flagNoExtractUi"
         android:inputType="number"
         android:nextFocusForward="@+id/edit_preco"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        />
+        <requestFocus />
 
-    <EditText
+    <faridnet.com.pesquisaapp.util.PrefixEditText
         android:id="@+id/edit_preco"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Preço"
-        android:imeOptions="flagNoExtractUi"
-        android:inputType="numberDecimal"
+        android:imeOptions="actionGo"
+        android:inputType="number"
         android:nextFocusForward="@+id/id_salvar"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:tag="R$ "/>
 
-    <Button
-        android:id="@+id/id_salvar"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/button_rounded"
-        android:text="Salvar"
-        android:textColor="#ffffff"
-        android:textSize="22sp" />
+    <!--<Button-->
+        <!--android:id="@+id/id_salvar"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="60dp"-->
+        <!--android:layout_marginTop="40dp"-->
+        <!--android:background="@drawable/button_rounded"-->
+        <!--android:text="Salvar"-->
+        <!--android:textColor="#ffffff"-->
+        <!--android:textSize="22sp" />-->
 
 </LinearLayout>
