--- a/app/src/main/res/layout/activity_pesquisa_list.xml
+++ b/app/src/main/res/layout/activity_pesquisa_list.xml
@@ -15,13 +15,21 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar_Pesquisa"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="wrap_content"
             android:background="@color/colorVarejo"
-            app:layout_scrollFlags="scroll|enterAlways"
-            >
+            app:layout_scrollFlags="scroll|enterAlways">
+
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:text="Pesquisa"
+                android:layout_marginStart="30dp"
+                android:textSize="24sp"
+                android:textColor="@color/white"/>
+
+            <include layout="@layout/layout_maintoolbar" />
 
         </androidx.appcompat.widget.Toolbar>
-
 
     </com.google.android.material.appbar.AppBarLayout>
     
