Agora o nome do comcorrente é exibido no no cardbox da activity pesquisaList
Adicionada funcionalidade de scanner na activity editPesquisa

Adicionado navegação voltar nas activities PesquisaProdutoList e ConcorrenteSpinner

Orientation mudadas para portrait em todas activities no androidManifest xml

--- a/app/src/main/res/layout/activity_pesquisa_produto_list.xml
+++ b/app/src/main/res/layout/activity_pesquisa_produto_list.xml
@@ -34,7 +34,7 @@
                 >
 
                 <androidx.appcompat.widget.AppCompatImageButton
-                    android:id="@+id/bsck_arrow"
+                    android:id="@+id/back_arrow"
                     android:layout_width="40dp"
                     android:layout_height="wrap_content"
                     android:background="?attr/selectableItemBackground"
