--- a/app/src/main/res/layout/activity_edit_pesquisa_produto.xml
+++ b/app/src/main/res/layout/activity_edit_pesquisa_produto.xml
@@ -13,18 +13,38 @@
         android:layout_height="wrap_content"
         android:text="@string/app_name" />
 
-    <EditText
-        android:id="@+id/edit_codBarras"
-        android:layout_width="match_parent"
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Código de Barras"
-        android:imeOptions="flagNoExtractUi"
-        android:inputType="number"
-        android:nextFocusForward="@+id/edit_preco"
-        android:textSize="20sp"
-        />
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/edit_codBarras"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Código de Barras"
+            android:imeOptions="flagNoExtractUi"
+            android:inputType="number"
+            android:nextFocusForward="@+id/edit_preco"
+            android:textSize="20sp"
+            />
         <requestFocus />
+
+        <Button
+            android:id="@+id/scan_buttom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_rounded"
+            android:textColor="#ffffff"
+            android:textSize="18sp"
+            android:text="Scan"
+
+            />
+
+    </LinearLayout>
 
     <faridnet.com.pesquisaapp.util.PrefixEditText
         android:id="@+id/edit_preco"
@@ -36,15 +56,5 @@
         android:nextFocusForward="@+id/id_salvar"
         android:textSize="20sp"
         android:tag="R$ "/>
-
-    <!--<Button-->
-        <!--android:id="@+id/id_salvar"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="60dp"-->
-        <!--android:layout_marginTop="40dp"-->
-        <!--android:background="@drawable/button_rounded"-->
-        <!--android:text="Salvar"-->
-        <!--android:textColor="#ffffff"-->
-        <!--android:textSize="22sp" />-->
 
 </LinearLayout>
