--- a/app/src/main/res/layout/activity_concorrente_spinner.xml
+++ b/app/src/main/res/layout/activity_concorrente_spinner.xml
@@ -19,11 +19,11 @@
             app:layout_scrollFlags="scroll|enterAlways">
 
             <TextView
-                android:layout_width="200dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="15dp"
                 android:paddingTop="10dp"
-                android:text="Concorrente"
+                android:text=" Concorrente"
                 android:textColor="@color/white"
                 android:textSize="24sp" />
 
@@ -32,13 +32,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp">
 
-                <androidx.appcompat.widget.AppCompatImageButton
-                    android:id="@+id/bsck_arrow"
-                    android:layout_width="40dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="40dp"
-                    android:background="?attr/selectableItemBackground"
-                    android:src="@drawable/ic_arrow_back_withe_24dp" />
+                <!--<androidx.appcompat.widget.AppCompatImageButton-->
+                <!--android:id="@+id/bsck_arrow"-->
+                <!--android:layout_width="40dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginStart="40dp"-->
+                <!--android:background="?attr/selectableItemBackground"-->
+                <!--android:src="@drawable/ic_arrow_back_withe_24dp" />-->
+
             </RelativeLayout>
 
 
