--- a/app/src/main/res/layout/activity_pesquisa_produto_list.xml
+++ b/app/src/main/res/layout/activity_pesquisa_produto_list.xml
@@ -19,7 +19,7 @@
             app:layout_scrollFlags="scroll|enterAlways">
 
             <TextView
-                android:layout_width="200dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="30dp"
                 android:paddingTop="10dp"
@@ -33,13 +33,13 @@
                 android:layout_marginStart="10dp"
                 >
 
-                <androidx.appcompat.widget.AppCompatImageButton
-                    android:id="@+id/back_arrow"
-                    android:layout_width="40dp"
-                    android:layout_height="wrap_content"
-                    android:background="?attr/selectableItemBackground"
-                    android:layout_marginStart="40dp"
-                    android:src="@drawable/ic_arrow_back_withe_24dp" />
+                <!--<androidx.appcompat.widget.AppCompatImageButton-->
+                    <!--android:id="@+id/back_arrow"-->
+                    <!--android:layout_width="40dp"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:background="?attr/selectableItemBackground"-->
+                    <!--android:layout_marginStart="40dp"-->
+                    <!--android:src="@drawable/ic_arrow_back_withe_24dp" />-->
             </RelativeLayout>
 
 
